// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-snooze-event Renders \`create-snooze-event\` with config data 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close="close"
  >
    <div
      class="title"
    >
      <span>
        Snooze
      </span>
    </div>
     
    <div
      class="text"
    >
      <div
        class="container"
      >
        <snooze-event-form-stub
          form="[object Object]"
          isnoterequired="true"
        />
      </div>
    </div>
     
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--flat theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Cancel
        </div>
      </button>
      <button
        class="primary v-btn theme--light"
        type="submit"
      >
        <div
          class="v-btn__content"
        >
          Save changes
        </div>
      </button>
    </div>
  </div>
</form>
`;

exports[`create-snooze-event Renders \`create-snooze-event\` with empty modal 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close="close"
  >
    <div
      class="title"
    >
      <span>
        Snooze
      </span>
    </div>
     
    <div
      class="text"
    >
      <div
        class="container"
      >
        <snooze-event-form-stub
          form="[object Object]"
        />
      </div>
    </div>
     
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--flat theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Cancel
        </div>
      </button>
      <button
        class="primary v-btn theme--light"
        type="submit"
      >
        <div
          class="v-btn__content"
        >
          Save changes
        </div>
      </button>
    </div>
  </div>
</form>
`;
